infra/cilium/allow-dns.yaml
# Allow DNS lookups (required for all pods)
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns
spec:
  description: "Allow DNS lookups to kube-dns"
  endpointSelector:
    matchLabels: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
      rules:
        dns:
          - matchPattern: "*"
